Update tag line and fix typo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js - The HTML Presentation Framework</title>
+		<title>Flohmarkthelfer</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
@@ -42,13 +42,13 @@
 			<div class="slides">
 				<section>
 					<h1>Flohmarkthelfer</h1>
-					<h3>Das Komplettsystem für Ihren Flohmarkt</h3>
+					<h3>Verhilft ihrem Flohmarkt zum Erfolg!</h3>
 					<img src="http://flohmarkthelfer.de/img/logo.png" width="200"/>
 				</section>
 
 				<section>
 					<h2>Webseite</h2>
-					<p>Auf der Webseite finden sich von Administratoren verwaltete Informationen. Verkäufer registrieren sich hier, um an kommenden Flohmärkten teilnehmen zu und mit erfolgter Reservierung ihre Artikel einzugeben und die Etiketten dafür auszudrucken.
+					<p>Auf der Webseite finden sich von Administratoren verwaltete Informationen. Verkäufer registrieren sich hier, um an kommenden Flohmärkten teilnehmen zu können und mit erfolgter Reservierung ihre Artikel einzugeben und die Etiketten dafür auszudrucken.
 				</section>
 
 				<section>
