Have screenshots focus on important information

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
 				<section>
 					<p>Die Startseite zeigt einige Statistiken</p>
-					<img src="screenshots/web/admin_home.png" width="600"/>
+					<img src="screenshots/web/admin_home.png" width="400"/>
 				</section>
 
 				<section>
@@ -148,6 +148,7 @@
 
 				<section>
 					<h3>Termine</h3>
+					<img src="screenshots/web/admin_events_menu.png" width="600"/>
 				</section>
 
 				<section>
@@ -189,6 +190,7 @@
 
 				<section>
 					<h3>Verkäufer</p>
+					<img src="screenshots/web/admin_sellers_menu.png" width="600"/>
 				</section>
 
 				<section>
@@ -208,12 +210,17 @@
 
 				<section>
 					<h3>Kategorien</h3>
+					<img src="screenshots/web/admin_categories_menu.png" width="600"/>
+				</section>
+
+				<section>
 					<p>Die Kategorien der Artikel sind individuell konfigurierbar.</p>
 					<img src="screenshots/web/admin_categories.png" width="600"/>
 				</section>
 
 				<section>
 					<h3>eMails</h3>
+					<img src="screenshots/web/admin_mails_menu.png" width="600"/>
 				</section>
 
 				<section>
